S28 3162: Report Update - Share Report (#885)